# UT-CallScreener

./: CMakeLists.txt  README.md  callscreener.apparmor  callscreener.desktop  clickable.yaml  install.sh  manifest.json.in
daemon/: callscreener-daemon.conf  callscreener_daemon.py
qml/: Main.qml
